--- a/main/EFISCO/Pages/PainelCadastros/ProdutosIntegrados/AmarrarFornecedor/AmarrarFornecedor.razor
+++ b/main/EFISCO/Pages/PainelCadastros/ProdutosIntegrados/AmarrarFornecedor/AmarrarFornecedor.razor
@@ -101,6 +101,8 @@
         {
             aviso = "Fornecedor não cadastrado no Protheus, não é pssível fazer a amarração ";
             exibeAviso = true;
+            modalRef.Hide();
+            return;
         }
 
 
