--- a/main/EFISCO/Pages/PainelCadastros/ProdutosIntegrados/Painel/ProdutoIntegradoPainel.razor
+++ b/main/EFISCO/Pages/PainelCadastros/ProdutosIntegrados/Painel/ProdutoIntegradoPainel.razor
@@ -41,6 +41,7 @@
     private async Task AmarracaoCallback(bool IsOk)
     {
         Reload = IsOk;
+        ShowAmarrarFornecedor = !IsOk;
        
     }
 }
