--- a/main/EFISCO/Pages/Menu/MenuBar.razor
+++ b/main/EFISCO/Pages/Menu/MenuBar.razor
@@ -6,7 +6,7 @@
             <MatAppBarRow>
                 <MatAppBarSection>
                     <MatIconButton Icon="menu" @onclick="AbrirMenuLateral"></MatIconButton>
-                    <MatAppBarTitle>E-FINANCEIRO</MatAppBarTitle>
+                    <MatAppBarTitle>E-FISCAL</MatAppBarTitle>
                 </MatAppBarSection>
                 <MatAppBarSection Align="@MatAppBarSectionAlign.End">
                     <MatIconButton Icon="home"  @onclick="GoHome"></MatIconButton>
