--- a/main/EFISCO/Pages/PainelImportcaoNFE/NfeDownload/NfeDownloadList.razor
+++ b/main/EFISCO/Pages/PainelImportcaoNFE/NfeDownload/NfeDownloadList.razor
@@ -5,7 +5,7 @@
 
 
 
-<MatButton @onclick="Download">Exportar</MatButton>
+<MatButton @onclick="Download" Raised="true">Exportar</MatButton>
 
 @if (!string.IsNullOrEmpty(erroMessage))
 {
