--- a/main/EFISCO/Pages/Index.razor
+++ b/main/EFISCO/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 @inject NavigationManager nav;
 
-<div class="container">
+<div class="container-fluid">
     <br />
     <br />
     <RadzenPanel AllowCollapse="true">
@@ -126,6 +126,9 @@
             </RadzenCard>
         </ChildContent>
     </RadzenPanel>
+    <EFISCO.Pages.Dashboards.Dash.DashBoardNFE/>
+    <br />
+    <br />
 </div>
 
 @code{
