--- a/main/EFISCO/Pages/Menu/NavMenu.razor
+++ b/main/EFISCO/Pages/Menu/NavMenu.razor
@@ -9,6 +9,7 @@
         <MatNavSubMenuList>
             <MatButton Icon="cloud_upload" Link="CertificadoUpload">Importar Certificado</MatButton>
             <MatButton Icon="assignment" Link="CertificadoLista">Certificados</MatButton>
+            <MatButton Icon="phonelink_setup" Link="ParametroPainel">Parâmetros de Sistema</MatButton>
         </MatNavSubMenuList>
     </MatNavSubMenu>
     <MatNavSubMenu>
